@@ -1,5 +1,7 @@
 DIST drumkv1-0.6.1.tar.gz 236868 SHA256 5c0a0206bfefc2e4d1c9c68daf40a0e2150490aa533a020e1fdad8619ea15520 SHA512 4c4f2f66ffc651eea659048bbe164f39724f048b8b6d8ea9bf91cf835f8a7302de7826aabf1d5d384bd52b8a7b01adc78f6f7fb54e10c5a931b7ee989ec40ef6 WHIRLPOOL 4989952d32c56daa742a4dbc4de59c0d0854c41bf33ddfeecae0c9a250251293717fe560238c3bcb16b1b8110c31932c57be88047160400bf0fbda554515263d
+DIST drumkv1-0.6.2.tar.gz 238174 SHA256 d0297b7b3c24a9b522e03b54d7f48d7b0c587bf2edda00c786d4f7fd4c1034cd SHA512 d5e303bdd9f680114b93422e3ce6fdb2df64e2e3163d12f4d4f7f00d32fdc59a44b4fc61ef755bbe90d807406d6e94e5a2b552f27ef3b0d91b52412afaeccf1b WHIRLPOOL 4e6e654bf200a6c89319fd6bd88dc5126e2b3691a64925b98e931622c75a05119da78812c42c1045df016766360da835c81e22dbf4e9fae23168882c3ee93674
 EBUILD drumkv1-0.6.1.ebuild 1939 SHA256 4b11525cdb65857cebfb9ac3099708c5c1e6fabfc493bf8340db5975aed1e766 SHA512 1893f67422048035819d97e78cad56ecd627d3776ced51006001cdb0a2c2a365f5cd16147276f76b9890330fb20ff0bcb2a8c53c9157cebe578ca77d67287ed2 WHIRLPOOL fee3a7faa93c7e44aa9c0dd69aefe90fccc48f47f84bb33702d54667186bb35b695287fe9181a6b43c36f85b04caa68c42ec0a964811e66335daa667660f76a7
+EBUILD drumkv1-0.6.2.ebuild 1939 SHA256 4b11525cdb65857cebfb9ac3099708c5c1e6fabfc493bf8340db5975aed1e766 SHA512 1893f67422048035819d97e78cad56ecd627d3776ced51006001cdb0a2c2a365f5cd16147276f76b9890330fb20ff0bcb2a8c53c9157cebe578ca77d67287ed2 WHIRLPOOL fee3a7faa93c7e44aa9c0dd69aefe90fccc48f47f84bb33702d54667186bb35b695287fe9181a6b43c36f85b04caa68c42ec0a964811e66335daa667660f76a7
 EBUILD drumkv1-9999.ebuild 1939 SHA256 4b11525cdb65857cebfb9ac3099708c5c1e6fabfc493bf8340db5975aed1e766 SHA512 1893f67422048035819d97e78cad56ecd627d3776ced51006001cdb0a2c2a365f5cd16147276f76b9890330fb20ff0bcb2a8c53c9157cebe578ca77d67287ed2 WHIRLPOOL fee3a7faa93c7e44aa9c0dd69aefe90fccc48f47f84bb33702d54667186bb35b695287fe9181a6b43c36f85b04caa68c42ec0a964811e66335daa667660f76a7
-MISC ChangeLog 2653 SHA256 036cbc9cd376e29da6380f2be32a069dd5d7d67ac3f83c3b98e86d13e8d9e397 SHA512 f3538bc0a50e68e00d0164eda4083ad143e80fcb994f3c0769c4ae1f97e82755449ce626cc5342d033111280b0dc1d09cc271a3c761623dded7068221221d342 WHIRLPOOL 077933fd0fbb28a44b5dc39babd910da66641f97f182569688f331f02eec1b67eb44580dfbc8c06135acabd58c7571a327d978f3ef3d34951326db21f470ecd7
+MISC ChangeLog 2789 SHA256 65f47d2235526283f3854c55e5cf6b550439fd747aca0ba9b668f9ba72f088eb SHA512 58e3feda9baee4df90b9ebb05f44bcfd1aeebeb5dfe0a9f363cc231ce57e6c2ee98cfb68280269ccec34b4e4b121c6c9452029ed8492b4f47ea6ac366b6457e8 WHIRLPOOL f8aa12e0940e1c83f9703645717eb2d3a2fab21d299d4c159751551ecdca234cd4840765a0bb9d167228eedd0ce85766597b3cd65660411cc17bd611e180407c
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
