@@ -1,5 +1,7 @@
 DIST samplv1-0.6.1.tar.gz 226184 SHA256 08c0a0cae57c93b22d44fb9cc9b13b5080df0990a42eeab4750011a0464950a2 SHA512 708110cc27f7769dc93e4df431ecbd3bafa9f0bcea76d297896c2e5333d7fbcc6a96b2b8ec8e90c073d81c97d7db31edf135cf71c79cd324e1af3cf8fee44a2f WHIRLPOOL fd26614b54c3ac115ba9364edcc3d4959d1b235c08225f4bb04f6bd3d7e484409e6e5acdbcd466a309c7e50cc24a97a4a7e1a832f11c2ebffc1bf8996f1c7d3f
+DIST samplv1-0.6.2.tar.gz 227505 SHA256 d6c11912a3317fcec847ebe52c691271b19d7a049c3c7028b67e3bd36f4d5a10 SHA512 99be883d9950c34534da10d4e58a2520ad0a24d61975b7efeebc9c062b4d147d32bd4abeda033f18d1dcde3e4ef6f2808ebc555880993f4bcb1d8b8fc9cc2c51 WHIRLPOOL 35f972094479458c578a7d8176b0ccebaf9c2cca622e036e62c133ee3f93ea42408bf57ba76a0d51fc378cd45574d72afb9963fc43e6a8b42ea058ff13728b94
 EBUILD samplv1-0.6.1.ebuild 1941 SHA256 19df76b4502ed3cc8b0b62ef88d685343949978b1e8c75d9a56e12b5f3cec6a0 SHA512 21a52a9ecb226a638c35c94c9bb1891e725977a4485b4f4d8f1f1af613686469c0bd5dd3535641a85ab440377aa47d4a8b94c150b6ab66dad6ad2b1d29ad8071 WHIRLPOOL 70b93fd6ac5478cb39029ae87d35b48f7983a0d58f526aca9c12d0deeb9ab1193ad5b3aeeed83264d06e9b91e708baec49cb2e66f66b6b849e083431606485d6
+EBUILD samplv1-0.6.2.ebuild 1941 SHA256 19df76b4502ed3cc8b0b62ef88d685343949978b1e8c75d9a56e12b5f3cec6a0 SHA512 21a52a9ecb226a638c35c94c9bb1891e725977a4485b4f4d8f1f1af613686469c0bd5dd3535641a85ab440377aa47d4a8b94c150b6ab66dad6ad2b1d29ad8071 WHIRLPOOL 70b93fd6ac5478cb39029ae87d35b48f7983a0d58f526aca9c12d0deeb9ab1193ad5b3aeeed83264d06e9b91e708baec49cb2e66f66b6b849e083431606485d6
 EBUILD samplv1-9999.ebuild 1941 SHA256 19df76b4502ed3cc8b0b62ef88d685343949978b1e8c75d9a56e12b5f3cec6a0 SHA512 21a52a9ecb226a638c35c94c9bb1891e725977a4485b4f4d8f1f1af613686469c0bd5dd3535641a85ab440377aa47d4a8b94c150b6ab66dad6ad2b1d29ad8071 WHIRLPOOL 70b93fd6ac5478cb39029ae87d35b48f7983a0d58f526aca9c12d0deeb9ab1193ad5b3aeeed83264d06e9b91e708baec49cb2e66f66b6b849e083431606485d6
-MISC ChangeLog 2947 SHA256 bab8bed3583524c6b465e5e45d57fe88ced52d3dffeff5affc52279388144c32 SHA512 fd9461830fc104e1b4e696cce85f0840c7dc91253ebfd99106b7678de2187417dbb60c63bd53354ef8b86ecf7c8ad8934dad12a915ef763e6e3dc73c5bede8ce WHIRLPOOL 1f5e48d7a7f21368ae7d7afb34e7a6ec18548249e62881563f575e6060008adc717aeafa756066a5110b36374a0b6f108f1d0c06fb2132559ed7acdf0fa0fd17
+MISC ChangeLog 3083 SHA256 075e809d6e02ef731ba178c6b6dc99ef1487c4973d88d7626248705e791dc3a6 SHA512 c4a8ab3cfd7f1f98eadae49a4e5bfd12a736193dfb9a73371a99e4ca90dd7b7ba187533c03c51040f593498a1bdda0e04de5bff3f45a6c16c219eaa4c572b086 WHIRLPOOL 9ba857ddf086b85503e6e67933baeed8d0304d2c7d7987f5533d47361b3493f957f47258f05fe9f790302e0ce1829861ba546fef462146a4c716c9bb65cc4935
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
