@@ -1,5 +1,7 @@
 DIST synthv1-0.6.1.tar.gz 207622 SHA256 8f6489a8b0eedba60fbdcefc5e55455b18bb5a49bfbf7b6f8f48369688ba3f6d SHA512 cd8c0a00a4e2e7173b00443cd3e7ed412c891a595bc4e673f37ca48b249e6bfd57c62cd53b2d5d8552e9d16fea83edbb484646e36affcf381d4b63eab00e6584 WHIRLPOOL ce05f588f9f3dca889af2b9199ef3bc7cce7c3c3ca979e8cecacc021439a7e43b4f53c3c85b4d6ef622f752c7b6b350aef444a8b8b6fd7f14e842808b4b2e8a4
+DIST synthv1-0.6.2.tar.gz 208916 SHA256 f5a105a51b35e58449c12b6bd843bf9923ce8127690d3eb8d5e790b88b061f5b SHA512 57050251cfef02df212a415bf30d790408a28c3f4c1add6fad3bf6019497b9c535761db30a967a717a291c5cd75ef5004b539bbf313fc04ecbfa2fd8b5895c5a WHIRLPOOL 73d6e454601f36ccd13eb30964cba2641da7e92f7f8b93fe607936e2bfdc7d8eaa681cfd6f71999290a2cd2d65a5a40b9c57ea2ce9b5cd51187a5f8e8a175dc8
 EBUILD synthv1-0.6.1.ebuild 1935 SHA256 8a0738ff623736535507b2028603f305e2e54432b08e6a4f7ed17cda559a2e64 SHA512 f0d1f1acdb7b5285f72faef26fd3ac56acd4906cdfe634101c273843ecaff1a6ca304cbb3a16c6f43364073dca723f684d05902190b93bd8d3bab5ff051af2d2 WHIRLPOOL e8359567c279d6b09b012c46c2856fe5d37f4508c3c79ccc29fdd3b466fc319a33844f02ca2158c4b0daad975cc901e61de226e939823e8a0468fa17e3b3d36d
+EBUILD synthv1-0.6.2.ebuild 1935 SHA256 8a0738ff623736535507b2028603f305e2e54432b08e6a4f7ed17cda559a2e64 SHA512 f0d1f1acdb7b5285f72faef26fd3ac56acd4906cdfe634101c273843ecaff1a6ca304cbb3a16c6f43364073dca723f684d05902190b93bd8d3bab5ff051af2d2 WHIRLPOOL e8359567c279d6b09b012c46c2856fe5d37f4508c3c79ccc29fdd3b466fc319a33844f02ca2158c4b0daad975cc901e61de226e939823e8a0468fa17e3b3d36d
 EBUILD synthv1-9999.ebuild 1935 SHA256 8a0738ff623736535507b2028603f305e2e54432b08e6a4f7ed17cda559a2e64 SHA512 f0d1f1acdb7b5285f72faef26fd3ac56acd4906cdfe634101c273843ecaff1a6ca304cbb3a16c6f43364073dca723f684d05902190b93bd8d3bab5ff051af2d2 WHIRLPOOL e8359567c279d6b09b012c46c2856fe5d37f4508c3c79ccc29fdd3b466fc319a33844f02ca2158c4b0daad975cc901e61de226e939823e8a0468fa17e3b3d36d
-MISC ChangeLog 3810 SHA256 f89f0341c34d3ce88827f5c574de47be4f93c2b8973174e0ef440ba4e92288c4 SHA512 96100339b377b7706414596999bc154a578b0817144144cf05d397c4c9f482b4c18246645682f4fd08eb5b363a6016774ab0bfb62abdb046c7caca33f9126b5e WHIRLPOOL 2f72230b68a6742ba0f1ebb6a6f1d799cfad16b24d0ce536d72e951ac2cd3f435d56d5a2bb2e2cb5efb80fe4cce96b4c7dedf3c4401baeedb942e17488f3219f
+MISC ChangeLog 3946 SHA256 38fd1a4ee648f174bda91083bdc6edc59476fd3efe9dc7ca64a9a6cdc2cf7d74 SHA512 c9945fb47ed4f877c4a0fee11b3ee29a3781e48e7d7e667ee5979a266accc839c15f3592663de134874d540782556336b123b04774d47c6a23e51db7e0922c3f WHIRLPOOL f747e80d9580cd7e4ac1f227323dfdd5efba5f110a35298570dedc3e760a827376ce25ab09f326dae7ea82c8650d83372c7175403ae76e96e00d9a97f6a72226
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
