@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*drumkv1-0.6.2 (01 May 2015)
+
+  01 May 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +drumkv1-0.6.2.ebuild:
+  version bump
+
 *drumkv1-0.6.1 (26 Mar 2015)
 
   26 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
